// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app reducer should set isConfirmDeleteModalOpen to FALSE on CLOSE_CONFIRM_DELETE_MODAL 1`] = `
Immutable.Map {
  isConfirmDeleteModalOpen: false,
  isSideBarOpen: false,
  isLoading: false,
  isMessageBarOpen: false,
  isFetching: false,
  selectedDayCalorieLog: 2017-08-21T20:27:24.101Z,
  message: "",
  isConsentModalOpen: false,
}
`;

exports[`app reducer should set isConfirmDeleteModalOpen to TRUE on OPEN_CONFIRM_DELETE_MODAL 1`] = `
Immutable.Map {
  isConfirmDeleteModalOpen: true,
  isSideBarOpen: false,
  isLoading: false,
  isMessageBarOpen: false,
  isFetching: false,
  selectedDayCalorieLog: 2017-08-21T20:27:24.101Z,
  message: "",
  isConsentModalOpen: false,
}
`;

exports[`app reducer should set isLoading to FALSE on CLOSE_API 1`] = `
Immutable.Map {
  isConfirmDeleteModalOpen: false,
  isSideBarOpen: false,
  isLoading: false,
  isMessageBarOpen: false,
  isFetching: false,
  selectedDayCalorieLog: 2017-08-21T20:27:24.101Z,
  message: "",
  isConsentModalOpen: false,
}
`;

exports[`app reducer should set isLoading to TRUE on INIT_API 1`] = `
Immutable.Map {
  isConfirmDeleteModalOpen: false,
  isSideBarOpen: false,
  isLoading: true,
  isMessageBarOpen: false,
  isFetching: false,
  selectedDayCalorieLog: 2017-08-21T20:27:24.101Z,
  message: "",
  isConsentModalOpen: false,
}
`;

exports[`app reducer should set isSideBarOpen to FALSE on CLOSE_SIDE_BAR 1`] = `
Immutable.Map {
  isConfirmDeleteModalOpen: false,
  isSideBarOpen: false,
  isLoading: false,
  isMessageBarOpen: false,
  isFetching: false,
  selectedDayCalorieLog: 2017-08-21T20:27:24.101Z,
  message: "",
  isConsentModalOpen: false,
}
`;

exports[`app reducer should set isSideBarOpen to TRUE on OPEN_SIDE_BAR 1`] = `
Immutable.Map {
  isConfirmDeleteModalOpen: false,
  isSideBarOpen: true,
  isLoading: false,
  isMessageBarOpen: false,
  isFetching: false,
  selectedDayCalorieLog: 2017-08-21T20:27:24.101Z,
  message: "",
  isConsentModalOpen: false,
}
`;
